--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -18,6 +18,13 @@
   </a>
 </div>
 
+<div class="mb-4">
+  <a href="/admin/payouts" class="btn btn-success btn-lg">
+    💸 Owner Payouts
+  </a>
+</div>
+
+
 
   <!-- ===== Traffic Metrics ===== -->
   <div class="card mb-4">
