--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -24,6 +24,13 @@
   </a>
 </div>
 
+<div class="mb-4">
+  <a href="/admin/payouts/paid" class="btn btn-outline-success btn-lg">
+    📄 Paid Payouts (History)
+  </a>
+</div>
+
+
 
 
   <!-- ===== Traffic Metrics ===== -->
