--- a/app/templates/dm_queue.html
+++ b/app/templates/dm_queue.html
@@ -47,7 +47,7 @@
 
           <optgroup label="Deposit">
             <option value="in_review" {{ 'selected' if status=='in_review' }}>In review</option>
-            <option value="awaiting_manager" {{ 'selected' if status=='awaiting_manager' }}>Awaiting decision</option>
+            <option value="awaiting_renter" {{ 'selected' if status=='awaiting_renter' }}>Awaiting decision</option>
             <option value="closed" {{ 'selected' if status=='closed' }}>Closed</option>
           </optgroup>
 
